--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite -c config/vite.config.ts",
     "build": "tsc -p config/tsconfig.json && vite build -c config/vite.config.ts",
     "lint": "eslint ./src -c config/.eslintrc.cjs --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write ./src --config config/.prettierrc.yaml"
+    "format": "prettier --write ./src --config config/.prettierrc.yaml",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -18,6 +20,14 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-vite": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -30,11 +40,18 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
+    "storybook": "^7.5.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
