--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-tailwind": "^0.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "sass": "^1.69.5",
     "storybook": "^7.5.3",
     "tailwindcss": "^3.3.5",
