--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite -c config/vite.config.ts",
-    "build": "tsc -p config/tsconfig.json && vite build -c config/vite.config.ts",
+    "build": "tsc && vite build -c config/vite.config.ts",
     "lint": "eslint ./src -c config/.eslintrc.cjs --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write ./src --config config/.prettierrc.yaml",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
