--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite -c config/vite.config.ts",
-    "build": "tsc && vite build -c config/vite.config.ts",
+    "build": "tsc --build --clean && vite build -c config/vite.config.ts",
     "lint": "eslint ./src -c config/.eslintrc.cjs --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write ./src --config config/.prettierrc.yaml",
     "storybook": "storybook dev -p 6006"
