--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
+    "recoil": "^0.7.7",
     "ulid": "^2.3.0",
     "uuid": "^9.0.1"
   },
