--- a/config/tsconfig.app.json
+++ b/config/tsconfig.app.json
@@ -20,7 +20,16 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Paths */
+    "baseUrl": "../src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@common/*": ["common/*"],
+      "@features/*": ["features/*"],
+      "@lib/*": ["lib/*"]
+    }
   },
   "include": ["../src"]
 }
