--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "i18next": "^23.7.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
     "recoil": "^0.7.7",
     "ulid": "^2.3.0",
